config/participants/duriantech/ingress.yaml

apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: ingress-duriantech
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: default-rewrite
spec:
  rules:
    - host: duriantech-backend.sandbox.mojaloop.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: duriantech-sim-duriantech-backend
              servicePort: 3003
    - host: duriantech-sdk-scheme-adapter-inbound.sandbox.mojaloop.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: duriantech-sim-duriantech-scheme-adapter
              servicePort: 4000
    - host: duriantech-sdk-scheme-adapter-outbound.sandbox.mojaloop.io
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: duriantech-sim-duriantech-scheme-adapter
              servicePort: 4001
